--- a/frontend/src/styles/navbar.module.css
+++ b/frontend/src/styles/navbar.module.css
@@ -1,1 +1,7 @@
-/* style */
+.nav{
+    padding:30px;
+        background-color: black;
+color:white;
+display: flex;
+justify-content:space-between
+    }
