--- a/frontend/src/styles/navbar.module.css
+++ b/frontend/src/styles/navbar.module.css
@@ -5,3 +5,8 @@ color:white;
 display: flex;
 justify-content:space-between
     }
+
+    .nav a{
+        color:white;
+        text-decoration:none
+    }
