--- a/frontend/src/styles/HomePage.module.css
+++ b/frontend/src/styles/HomePage.module.css
@@ -2,24 +2,27 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 5%;
+  gap: 10%;
  margin-top: 3%;
+
 }
 
 .coursediv {
   /* border: 1px solid black; */
 
-  height: 350px;
-  width: 300px;
+  height: 380px;
+  width: 350px;
   border-radius: 20px;
 overflow: hidden;
 box-shadow: inset 0px 0px 2px 0px rgba(0, 0, 0, 0.6);
 
 cursor: pointer;
   /* visibility: hidden; */
+
+  margin-bottom: 30px;
 }
 .coursediv img {
-  width: 300px;
+  width: 350px;
 
 }
 
@@ -53,4 +56,8 @@ cursor: pointer;
 }
 .buttonBuy:hover {
 background-color:gray;
+}
+
+.CarouselDiv  img{
+  height: 380px;
 }
