--- a/frontend/src/styles/HomePage.module.css
+++ b/frontend/src/styles/HomePage.module.css
@@ -9,20 +9,21 @@
 
 .coursediv {
   /* border: 1px solid black; */
-
+  text-align: center;
   height: 380px;
   width: 350px;
   border-radius: 20px;
 overflow: hidden;
 box-shadow: inset 0px 0px 2px 0px rgba(0, 0, 0, 0.6);
 
-cursor: pointer;
+
   /* visibility: hidden; */
 
   margin-bottom: 30px;
 }
 .coursediv img {
   width: 350px;
+  height: 200px;
 
 }
 
@@ -34,7 +35,7 @@ cursor: pointer;
   /* display: -webkit-box !important; */
   -webkit-line-clamp: 2;
   
-  font-weight: 400;
+  font-weight: bold;
 
   max-width: 60rem;
 }
@@ -49,15 +50,20 @@ cursor: pointer;
     
     width: 100px;
     justify-content: center;
-    background-color: darkgray;
+    background-color: #ff9400;
   border:none;
+  color:white;
   padding:10px;
+  border-radius: 5px;
+  cursor: pointer;
       
 }
 .buttonBuy:hover {
-background-color:gray;
+background-color:#d6bf39;
 }
 
 .CarouselDiv  img{
-  height: 380px;
+  height: 350px;
+  margin: auto;
+  width: 80%;
 }
