--- a/frontend/src/styles/navbar.module.css
+++ b/frontend/src/styles/navbar.module.css
@@ -1,6 +1,6 @@
 .nav{
     padding:30px;
-        background-color: black;
+        background-color: #183962;
 color:white;
 display: flex;
 justify-content:space-between
@@ -10,3 +10,31 @@ justify-content:space-between
         color:white;
         text-decoration:none
     }
+
+    .btn{
+        color:white;
+        background-color: #ff9400;
+        font-weight:bold;
+        width:120px;
+        padding:10px;
+        border-radius: 5px;
+        border:none;
+        cursor: pointer;
+    }
+    .tir{
+        width:100%;
+        height: 40px;
+        border-radius: 5px;
+    }
+    .navlogo{
+        text-align: center;
+        width:10%;
+        color:#ff9400;
+        border-radius: 5px;
+        height:40px;
+    }
+ .head{
+    font-weight: bold;
+    font-size: 24px;
+    color:#ff9400;
+ }
