--- a/frontend/src/styles/DeshBoard.module.css
+++ b/frontend/src/styles/DeshBoard.module.css
@@ -18,7 +18,7 @@ gap: 10px;
 border-bottom: 2px solid white;
     display: flex;
     flex-direction: column;
-    background-color: rgb(238, 235, 227);
+    background-color:#f1b662;
     justify-content:center;
     align-items:center;
     line-height: 0;
